--- a/upload-filepond/src/App.css
+++ b/upload-filepond/src/App.css
@@ -22,6 +22,13 @@
   font-size: large;
 }
 
+.Margin-25{
+  margin-top: 25px;
+  margin-right: 25px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
